--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -196,11 +196,7 @@
 
     }
 }
-@media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
     .blogblock{
       height: 540px ! important;
     }
@@ -211,11 +207,7 @@
       padding-top: 77px ! important;
     }
   }
-  @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
-  and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
   .blogblock{
     height: 515px ! important;
 
@@ -225,11 +217,7 @@
       padding: 7px 0px;
     }
   }
-  @media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 768px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
     .blogbtn1{
       padding: 7px 0px;
       width: 220px;
@@ -237,6 +225,9 @@
     }
     .blogdate{
       /*padding-top: 113px ! important;*/
+    }
+    .blogblock{
+      height: 555px ! important;
     }
 
 
