--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -237,7 +237,7 @@ color: #fff;
     right: 282px;
     z-index: 100;
     height: 75px;
-    top: 709px;
+    top: 719px;
     opacity: 0;
 }
 .add6{
@@ -266,7 +266,7 @@ color: #fff;
 }
 .add9{
   position: relative;
-    left: 266px;
+    left: 274px;
     z-index: 100;
     height: 75px;
     top: 219px;
@@ -3526,6 +3526,103 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
         margin-left: 0px ! important
       }
  }
+ @media only screen and (device-width : 1400px) { 
+    .Journycaro10{
+       opacity: 1;
+      left: 480px ! important;
+
+      }
+      .add9{
+        opacity: 1;
+        left:316px !important;
+      }
+      .roadjourny{
+        overflow:inherit;
+        z-index: 0! important ;
+
+   }  
+      .add10{
+         opacity: 1;
+        left:138px ! important;
+
+      }
+      .add8{
+          opacity: 1;
+          right: -493px ! important;
+      }
+      .Journycaro1{
+         opacity: 1;
+          z-index: 0! important ;
+       }
+       .Journycaro2{
+         opacity: 1;
+          z-index: 0! important ;
+       }
+       .Journycaro3{
+         opacity: 1;
+          z-index: 0! important ;
+       }
+       .Journycaro4{
+         opacity: 1;
+
+          z-index: 0! important ;
+       }
+      .Journycaro5{
+         opacity: 1;
+        left:996px ! important;
+      }
+      .Journycaro6{
+        opacity: 1;
+        left:368px ! important;
+         z-index: 0! important ;
+      }
+      .add6{
+         opacity: 1;
+        left:254px ! important;
+         z-index: 0! important ;
+      }
+      .add7{
+        opacity: 1;
+         z-index: 0! important ;
+      }
+      .add5{
+        opacity: 1;
+         z-index: 0! important ;
+      }
+      .add4{
+        opacity: 1;
+         z-index: 0! important ;
+      }
+      .add3{
+        opacity: 1;
+         z-index: 0! important ;
+      }
+      .add2{
+        opacity: 1;
+         z-index: 0! important ;
+      }
+      .add1{
+        opacity: 1;
+         z-index: 0! important ;
+      }
+      .Journycaro4{
+         opacity: 1;
+        left:692px ! important;
+      }
+      .Journycaro7{
+        opacity: 1;
+      }
+      .Journycaro8{
+        opacity: 1;
+      }
+      .Journycaro9{
+        opacity: 1;
+      }
+      .iogimg_4{
+        width: 866px ! important;
+        margin-left: 0px ! important
+      }
+ }
   @media only screen 
     and (min-device-width : 393px) 
     and (device-height : 851px){
@@ -3962,7 +4059,8 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
  @media only screen and (device-width : 1024px) and (device-height : 768px) { 
 
    .add1{
-    left:594px;
+    left:583px;
+    opacity: 1;
    }
    .add2{
     left:6px;
@@ -5844,6 +5942,9 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
       left:425px ! important;
       opacity: 1;
     }
+    .journybg2{
+      display: none;
+    }
     .add1{
       left:501px ! important;
       opacity: 1;
@@ -5880,8 +5981,9 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
        z-index: 0! important ;
     }
     .add8{
-      right: -377px ! important;
+      right: -761px ! important;
       opacity: 1;
+      top:170px ! important;
        z-index: 0! important ;
     }
     .Journycaro8{
@@ -5912,7 +6014,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
        z-index: 0! important ;
     }
     .add9{
-      left:115px ! important;
+      left:133px ! important;
       opacity: 1;
        z-index: 0! important ;
     }
@@ -5933,6 +6035,7 @@ box-shadow: 0 10px 29px rgba(92,141,255,.22);
     }
     .add10{
       opacity: 1;
+      top:50px;
        z-index: 0! important ;
     }
     .add3 {
