--- a/ui/website/src/allBlocks/Resourceprivacy/Resourceprivacy.css
+++ b/ui/website/src/allBlocks/Resourceprivacy/Resourceprivacy.css
@@ -30,6 +30,9 @@
 	padding-top: 10px;
     font-size: 18px;
 }
+.resource_privacy{
+  margin-left: 60px;
+}
 @media only screen and (device-width : 414px) and (device-height : 736px) { 
   .resource_blck{
     padding: 30px ! important;
@@ -166,4 +169,9 @@
   }
   
 
+}
+@media only screen and (device-width : 1024px) and (device-height : 768px) { 
+  .resource_privacy{
+    margin-left: 40px;
+  }
 }
