--- a/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
@@ -410,7 +410,13 @@
     width:250px;
    }
 
-} 
+}
+@media only screen and (device-width : 1024px) and (device-height : 768px) { 
+ .paddingg_for_ip{
+  padding-left: 0px ! important;
+ }
+
+}
 @media only screen and (device-width : 375px) and (device-height : 667px) { 
   .serflip-card {
       width: 250px ! important;
