--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -466,15 +466,14 @@
     width: 235px ! important;
   }
  } 
-@media only screen 
-  and (device-width: 1024px) 
-  and (device-height: 768px) 
-  and (orientation: landscape) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
-    
+@media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) { 
     .newcard {
-    width: 255px ! important;
+    width: 200px ! important;
     }
+    .serflip-card img{
+      width: 150px ! important;
+    }
+
 }
 @media only screen and (device-width : 320px)and (device-height : 480px){
   .img1 img{
