--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -2174,3 +2174,9 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
         margin-left: 80px ! important;
     }
  } 
+ @media only screen and (device-width : 3200px) {
+  .newcard_HD{
+    width: 460px ! important;
+  }
+
+ }
