--- a/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
+++ b/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
@@ -261,7 +261,7 @@ left: 35% ! important;
 /* Styles */
 }
 
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5) {
 	.All1blog1{
 		margin-left: 55px ! important;
 	}
@@ -277,12 +277,12 @@ left: 35% ! important;
    
  } 
 
-@media only screen and (device-width : 2560px) and (device-height : 1600px) { 
- .BolgsHoghDef{
-	 	margin-left: 100px ! important;
+@media only screen and (device-width : 2560px){ 
+ .All1blog1{
+	 	margin-left: 80px ! important;
 	 }
 }
-@media only screen and (device-width : 1366px) and (device-height : 768px) { 
+@media only screen and (device-width : 1366px) { 
  .All1blog1{
 	 	margin-left: 45px ! important;
 	 }
